--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,19 @@
     <string name="location_on_the_map">Location on the map</string>
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
+    <string name="language">Language</string>
+    <string name="en">English</string>
+    <!-- The action for submitting a form. This text is on a button that can fit 30 chars -->
+    <string name="ru">Russian</string>
+    <string name="help_big_text">При парковке:\n
+  →  Определите, с какого въезда вы заехали и примерно оцените расстояние от него\n
+  →  Если на картах присутствует детализированная прорисовка паркинга/тц, на котором вы находитесь, используйте опорные точки (например, входы/выходы из паркинга/тц, в котором вы находитесь), чтобы поставить маркер с высокой точностью\n
+  →  Если паркинг использует маркировку мест, запишите/сфотаграфируйте номер места, где вы припарковали свой автомобиль\n
+  →  При фотографии автомобиля пытайтесь запечатлеть опорные точки\n
+  →  При написании заметки не забудьте указать этаж, на котором находится автомобиль и время въезда в паркинг, если он является платным\n
+\n
+При поиске авто:\n
+  →  Пытайтесь следовать к автомобилю по тому же пути, как от него уходили\n
+  →  Если на паркинге имеется маркировка мест, воспользуйтесь ей: стоя у ближайшего маркера найдите любой маркер, находящийся от вас по диагонали (на одно место вперёд и на одно место в сторону) - так вы поймёте в какую сторону вам нужно двигаться, чтобы найти свой автомобиль //Сюда можно вставить алфавит, чтобы человеку было проще быстро понимать, куда двигаться\n
+  →  Если в вашем паркинге плохо работают службы геолокации, не полагайтесь на автоматически построенный маршрут - он может запутать вас</string>
 </resources>
