--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -36,6 +36,13 @@
     <string name="language">Язык</string>
     <string name="en">Английский</string>
     <string name="ru">Русский</string>
+    <string name="theme">Тема</string>
+    <string name="light">Светлая</string>
+    <string name="dark">Тёмная</string>
+    <string name="clear_history_alert">Очистить историю парковки?</string>
+    <string name="clear">Очистить</string>
+    <string name="cancel">Отмена</string>
+    <string name="settings_toast">Изменения применятся после перезапуска</string>
     <string name="help_big_text">При парковке:\n
   →  Определите, с какого въезда вы заехали и примерно оцените расстояние от него\n
   →  Если на картах присутствует детализированная прорисовка паркинга/тц, на котором вы находитесь, используйте опорные точки (например, входы/выходы из паркинга/тц, в котором вы находитесь), чтобы поставить маркер с высокой точностью\n
@@ -45,6 +52,6 @@
 \n
 При поиске авто:\n
   →  Пытайтесь следовать к автомобилю по тому же пути, как от него уходили\n
-  →  Если на паркинге имеется маркировка мест, воспользуйтесь ей: стоя у ближайшего маркера найдите любой маркер, находящийся от вас по диагонали (на одно место вперёд и на одно место в сторону) - так вы поймёте в какую сторону вам нужно двигаться, чтобы найти свой автомобиль //Сюда можно вставить алфавит, чтобы человеку было проще быстро понимать, куда двигаться\n
+  →  Если на паркинге имеется маркировка мест, воспользуйтесь ей: стоя у ближайшего маркера найдите любой маркер, находящийся от вас по диагонали (на одно место вперёд и на одно место в сторону) - так вы поймёте в какую сторону вам нужно двигаться, чтобы найти свой автомобиль\n
   →  Если в вашем паркинге плохо работают службы геолокации, не полагайтесь на автоматически построенный маршрут - он может запутать вас</string>
 </resources>
